--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: Build Docker Image
+name: Build and Push Docker Images
 
 on:
   push:
@@ -15,17 +15,41 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker image
+      # Build app1
+      - name: Build app1
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ./app1
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/devops-app:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/devops-mini-project-app1:latest
 
-        run: echo "Hello CI! Pipeline работает."
+      # Build app2
+      - name: Build app2
+        uses: docker/build-push-action@v5
+        with:
+          context: ./app2
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/devops-mini-project-app2:latest
+
+      # Build app3
+      - name: Build app3
+        uses: docker/build-push-action@v5
+        with:
+          context: ./app3
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/devops-mini-project-app3:latest
+
+      # Build proxy (nginx)
+      - name: Build proxy
+        uses: docker/build-push-action@v5
+        with:
+          context: ./proxy
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/devops-mini-project-proxy:latest
+
