feat: Final Helm Chart implementation, K8s Secrets, and cleanup of obsolete files.

--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -1,15 +1,15 @@
 # Определение группы бэкендов
 upstream my_loadbalancer {
     # App 1 (Используем имя сервиса)
-    server app1:80;
+    server app1-service:80;
     
     # App 2 (Используем имя сервиса)
-    server app2:80;
+    server app2-service:80;
     
     # App 3 (Масштабированный сервис. Указываем его три раза для балансировки нагрузки.)
-    server app3:80;
-    server app3:80;
-    server app3:80;
+    server app3-service:80;
+    server app3-service:80;
+    server app3-service:80;
 }
 
 # Основной сервер Nginx
