feat: Configured Liveness/Readiness Probes for App3.

--- a/devops-mini-project-chart/templates/app3-deployment.yaml
+++ b/devops-mini-project-chart/templates/app3-deployment.yaml
@@ -35,3 +35,20 @@ spec:
               key: mysql-root-password # Ключ Secret
         - name: DB_USER
           value: {{ .Values.app3.db.user | quote }}
+        # --- ДОБАВЛЯЕМ ПРОВЕРКИ ЗДОРОВЬЯ ---
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 80
+          initialDelaySeconds: 15
+          periodSeconds: 10
+          timeoutSeconds: 5
+
+        readinessProbe:
+          httpGet:
+            path: /healthz
+            port: 80
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          timeoutSeconds: 3
+        # --------------------------------
