feat: Added TCP Liveness and Readiness Probes for App1 (PHP) and App2 (Node.js).

--- a/devops-mini-project-chart/templates/app1-deployment.yaml
+++ b/devops-mini-project-chart/templates/app1-deployment.yaml
@@ -20,3 +20,18 @@ spec:
         image: {{ .Values.app1.image }}
         ports:
         - containerPort: {{ .Values.app1.servicePort }}
+        # --- ДОБАВЛЯЕМ ПРОВЕРКИ ЗДОРОВЬЯ ---
+        livenessProbe:
+          tcpSocket:
+            port: 80 # Проверка, что порт 80 открыт
+          initialDelaySeconds: 10
+          periodSeconds: 10
+          timeoutSeconds: 5
+
+        readinessProbe:
+          tcpSocket:
+            port: 80 # Проверка, что порт 80 открыт
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          timeoutSeconds: 3
+        # --------------------------------
