--- a/devops-mini-project-chart/templates/nginx-service.yaml
+++ b/devops-mini-project-chart/templates/nginx-service.yaml
@@ -12,4 +12,4 @@ spec:
     - protocol: TCP
       port: 80         # Порт Service внутри кластера
       targetPort:  {{ .Values.nginx.servicePort }}   # Порт Nginx-контейнера
-      nodePort: {{ .Values.nginx.nodePort }}
+      type: ClusterIP
