--- a/devops-mini-project-chart/templates/ingress.yaml
+++ b/devops-mini-project-chart/templates/ingress.yaml
@@ -7,30 +7,30 @@ metadata:
     {{- include "devops-mini-project-chart.labels" . | nindent 4 }}
   annotations:
     # Используйте эти аннотации для Ingress Controller Nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /1$
     kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
   - http:
       paths:
-      # Правило 1: Трафик на /app1 перенаправляется на Service App1
-      - path: /app1
+      # Правило 1: App1. Путь теперь заканчивается на (.*)
+      - path: /app1/(.*)
         pathType: Prefix
         backend:
           service:
             name: {{ include "devops-mini-project-chart.fullname" . }}-app1
             port:
               number: 80
-      # Правило 2: Трафик на /app2 перенаправляется на Service App2
-      - path: /app2
+      # Правило 2: App2. Путь теперь заканчивается на (.*)
+      - path: /app2/(.*)
         pathType: Prefix
         backend:
           service:
             name: {{ include "devops-mini-project-chart.fullname" . }}-app2
             port:
               number: 80
-      # Правило 3: Трафик на /app3 перенаправляется на Service App3
-      - path: /app3
+      # Правило 3: App3 Путь теперь заканчивается на (.*)
+      - path: /app3/(.*)
         pathType: Prefix
         backend:
           service:
