fix: Updated Ingress rewrite-target to /? to handle trailing slashes and resolve 404s.

--- a/devops-mini-project-chart/templates/ingress.yaml
+++ b/devops-mini-project-chart/templates/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     {{- include "devops-mini-project-chart.labels" . | nindent 4 }}
   annotations:
     # Используйте эти аннотации для Ingress Controller Nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /1$
+    nginx.ingress.kubernetes.io/rewrite-target: /1$?
     kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
