fix: Corrected app2/Dockerfile to use Node.js base image and run server.js.

--- a/app2/Dockerfile
+++ b/app2/Dockerfile
@@ -1,8 +1,17 @@
-# Берём официальный Nginx
-FROM nginx:latest
+# app2/Dockerfile
 
-# Копируем HTML в стандартную папку Nginx
-COPY index.html /usr/share/nginx/html/index.html
+# 1. Используем официальный образ Node.js (вместо Nginx)
+FROM node:20-alpine
+
+# Устанавливаем рабочую директорию
+WORKDIR /app
+
+# 2. Копируем файл приложения (предполагаем, что он называется server.js)
+# Если у вас есть package.json, вам также нужно его скопировать и выполнить npm install
+COPY server.js /app/server.js
 
 # Открываем порт 80
 EXPOSE 80
+
+# 3. Запускаем Node.js приложение (этот шаг был пропущен)
+CMD ["node", "server.js"]
